crono_tt4/TimeTagger4_interface.h

/*!@}*/

/*! \ingroup devicetype
*	\brief sets the type of the device to TIMETAGGER4
*/
#define CRONO_DEVICE_TIMETAGGER4 8
	/*!\ingroup device
	* \brief struct storing properties of the device in use
	*/
	typedef struct {
		/*! \brief timetagger4
		*/
		void * timetagger4;
	} timetagger4_device;
	/*!	\ingroup initparamsstruct 
	*	\brief struct for the initialization of the TimeTagger4
	*
	*	this structure MUST be completely INITIALIZED
	*/
	typedef tdc4_init_parameters timetagger4_init_parameters;
	/*! \ingroup readout
	*	\brief returns most recent error message
	*	\param *device is type timetagger4_device
	*/
	TIMETAGGER4_API const char* timetagger4_get_last_error_message(timetagger4_device* device);
 

	/*!	\ingroup readout
	*	\brief returns the type of the device 
	*	
	*	@link devicetype CRONO_DEVICE_TIMETAGGER4 @endlink
	*/
	TIMETAGGER4_API int timetagger4_get_device_type(timetagger4_device *device);
	/*!	\ingroup channel
	*	\brief Contains TDC channel settings
	*/
	typedef tdc4_channel timetagger4_channel;
	/* currently unsupported */
	typedef tdc4_lowres_channel timetagger4_lowres_channel;
	/*!	\ingroup tiger
	*	\brief contains settings of timing generator
	*/
	typedef tdc4_tiger_block timetagger4_tiger_block;
	/* low res trigger config */
	/*!\ingroup trigger
	*	\brief contains trigger settings
	*/
	typedef tdc4_trigger timetagger4_trigger;
	/*! \ingroup confstruct Structure timetagger4_configuration
	*	\brief	contains configuration information
	*
	*	This structure contains the configuration information. It is used in conjunction with
	*	@link conffuncts timetagger4_get_default_configuration(), timetagger4_get_current_configuration()
	*	and timetagger4_configure() @endlink
	*
	*	Internally it uses the structures @link trigger timetagger4_trigger @endlink and @link tiger
	*	timetagger4_tiger_block @endlink
	*/
	typedef struct {
		/*! \brief The number of bytes occupied by the structure
		*/
		int size; //!< The number of bytes occupied by the structure
		/*! \brief A version number
		*
		* that is increased when the definition of the structure is changed. The increment
		* can be larger than one to match driver version numbers or similar. Set to 0 for
		* all versions up to first release.
		*/
		int version;
		/*! \brief TDC mode
		*
		*	can be @link tdcmode grouped or continous @endlink. Currently supported: grouped.
		*/
		int tdc_mode;
		/*! \brief rising or falling edge trigger
		*
		*	whether to sync the TDC on the rising or falling edge
		*/
		crono_bool_t start_rising;
		/*! \brief Set DAC channels for T, A - D.
		*	
		*	dc_offset[0]     : Start
		*
		*	dc_offset[1 - 4] : A - D
		*	
		*	Set to a value between -1.65V and +0.85V. This should be close to 50% of the height of your pulses on
		*	the inputs. Examples for various signaling standards are defined in @link defdcoffset #defines for
		*	dc_offset @endlink. The inputs are AC coupled. This means that for pulse inputs the absolute voltage is
		*	not important. it is rather the relative pulse amplitude that causes the input circuits to switch.
		*	dc_offset for an input must be set to the relative switching voltage for the input standard in use. If
		*	the pulses are negative, a negative switching threshold must be set and vice versa.
		*/
		double dc_offset[TIMETAGGER4_TDC_CHANNEL_COUNT + 1];
		timetagger4_trigger trigger[TIMETAGGER4_TRIGGER_COUNT]; //!< Configuration of external trigger sources
		timetagger4_tiger_block tiger_block[TIMETAGGER4_TIGER_COUNT]; //!< configuration of the timing generator
		timetagger4_channel channel[TIMETAGGER4_TDC_CHANNEL_COUNT]; //!< configure polaritiy, type and threshold for the TDC channels
		timetagger4_lowres_channel lowres_channel[TIMETAGGER4_LOWRES_CHANNEL_COUNT]; // currently unsupported
		/** \brief component to create a trigger either periodically or randomly.
		*
		*  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink
		*	and N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink
		*	that result in a distance between triggers of
		*
		*		T = 1 + M + [1...2^N]
		*
		*	clock cycles.
		*
		*		0 <= M < 2^32
		*
		*		0 <= N < 32
		*
		*  there is no enable or reset as the usage of this trigger can be configured in the channels.
		*/
		///@{
		int auto_trigger_period;
		/** \brief component to create a trigger either periodically or randomly.
		*
		*  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink
		*	and N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink
		*	that result in a distance between triggers of
		*
		*		T = 1 + M + [1...2^N]
		*
		*	clock cycles.
		*
		*		0 <= M < 2^32
		*
		*		0 <= N < 32
		*
		*  there is no enable or reset as the usage of this trigger can be configured in the channels.
		*/
		int auto_trigger_random_exponent;
		///@}

	} timetagger4_configuration;
	/*!	\ingroup conffuncts
	*	\brief gets default configuration
	*
	*	Copies the default configuration to the specified config pointer. Return values are listed @link defdefconf here @endlink.
	*	\param *device of type timetagger4_device
	*	\param *config of type timetagger4_configuration
	*/
	TIMETAGGER4_API int timetagger4_get_default_configuration(timetagger4_device *device, timetagger4_configuration *config);
	/*!	\ingroup conffuncts
	*	\brief gets current configuration
	*
	*	Copies the current configuration to the specified config pointer. Return values are listed @link defcurconf here @endlink.
	*	\param *device of type timetagger4_device
	*	\param *config of type timetagger4_configuration
	*/
	TIMETAGGER4_API int timetagger4_get_current_configuration(timetagger4_device *device, timetagger4_configuration *config);
	/*!	\ingroup conffuncts
	*	\brief configures timetagger4 device
	*
	*	Return values are listed @link defconf here @endlink.
	*	\param *device of type timetagger4_device
	*	\param *config of type timetagger4_configuration
	*/
	/* the config information is copied, so can be changed after the 
	called */
	TIMETAGGER4_API int timetagger4_configure(timetagger4_device *device, timetagger4_configuration * config);
	/*!	\ingroup initfuncts 
	*	\brief Return the number of boards that are supported by this driver in the system.
	*	\param *error_code is type int
	*	\param **error_message is type const char
	*/
	TIMETAGGER4_API int timetagger4_count_devices(int *error_code, const char** error_message);
	/*!	\ingroup initfuncts 
	* @{
	*/
	/*!	\brief Sets up the standard parameters
	*
	*	Gets a set of default parameters for @link timetagger4_init timetagger4_init() @endlink . This must always
	*	be used to initialize the @link initparamsstruct timetagger4_init_parameter() @endlink structure.
	*	Return values are listed @link defdefinpar here @endlink.
	*	\param init is type *timetagger4_init_parameters
	*/
	TIMETAGGER4_API int timetagger4_get_default_init_parameters(timetagger4_init_parameters * init);
	/*!	\brief Open and initialize the TIMETAGGER4 board with the given index.
	*
	*	With error_code and error_message the user must provide pointers where error information should be
	*	written by the driver. Return values are listed @link definit here @endlink.
	*	\param *params type timetagger4_init_parameters
	*	\param *error_code is type int
	*	\param **error_message is type char. The buffer for the error message has to contain at least 80 chars.
	*/
	TIMETAGGER4_API timetagger4_device *timetagger4_init(timetagger4_init_parameters *params, int *error_code, const char** error_message);
	/*!@}*/

	/*!	\ingroup readin
	*	\brief The parameters of the read commands
	*/
	typedef struct {	
		crono_bool_t acknowledge_last_read; //!< timetagger4_read automatically acknowledges packets from the last read
	} timetagger4_read_in;
	/*! \ingroup strucreadout
	*	\brief struct for the read out of the Ndigo packets
	*/
	typedef struct {
		/*!	\brief pointer to the first packet
		*
		*	that was captured by the call of @link readout timetagger4_read @endlink
		*/
		crono_packet *first_packet;
		/*!	\brief The packet after the last one
		*
		*	this is not a valid packet
		*/
		crono_packet *last_packet;
		/*! \brief error code
		*
		*	The assignments of the error codes can be found @link defread here @endlink.
		*/
		int error_code;
		/*!	\brief error message
		*/
		const char *error_message;
	} timetagger4_read_out;
	/*!	\ingroup readout
	*	\brief Reads packets from the board
	*
	*	optionally automatically acknowledges the last read packets. Return values are listed @link defread here @endlink.
	*	\param *device is type timetagger4_device
	*	\param *in is type timetagger4_read_in
	*	\param *out is type timetagger4_read_out
	*/
	TIMETAGGER4_API int timetagger4_read(timetagger4_device *device, timetagger4_read_in *in, timetagger4_read_out *out);