crono_tt4/TDC4_interface.h

	/*!	\ingroup channel
	*	\brief Contains TDC channel settings
	*/
	typedef struct {
		crono_bool_t enabled;			//!< Enable TDC channel. 
		crono_bool_t rising;			//!< Set whether to record rising or falling edges.
		crono_bool_t cc_enable;			//!< Enable carry chain TDC as backup
		crono_bool_t cc_same_edge;		//!< Set whether the carry chain TDC records the same edge as THS788 (as backup) or opposite edge
		crono_bool_t ths788_disable;	//!< Disable THS788 timestamps

		/*!	\brief Veto function 
		*
		*	only timestamps >= start are recorded.
		*/
		int start;
		/*!	\brief Veto function
		*
		*	only timestamps <= stop are recorded. 
		*/
		int stop;

	} tdc4_channel;
	/*!	\ingroup lowres_channel
	*	\brief Contains digital channel settings
	*/
	typedef struct {
		crono_bool_t enabled; //!< Enable TDC channel.
		/*!	\brief Veto function 
		*
		*	only timestamps >= start are recorded.
		*/
		int start;
		/*!	\brief Veto function
		*
		*	only timestamps <= stop are recorded. 
		*/
		int stop;
	} tdc4_lowres_channel;
	/*!	\ingroup tiger
	*	\brief contains settings of timing generator
	*/
	typedef struct {
		crono_bool_t enable; //!< activates timing generator
		/*! \brief inverts output polarity
		*
		* default is set to false.
		*/
		crono_bool_t negate;
		/*!	\brief enables/disables retrigger setting
		*
		*	Default is set to false. If retriggering is enabled the timer is reset to the value of the start
		*	parameter, whenever the input signal is set while waiting to reach the stop time.
		*/
		crono_bool_t retrigger;
		// default is true
		crono_bool_t extend;				//!< not implemented
		crono_bool_t enable_lemo_output;	//!< enables the LEMO output
		/*! \brief Precursor
		*  
		*  Number of 6.6ns clock cycles before the tiger output goes active
		*	relative to the trigger signal.
		*/
		int start;
		/*! \brief postcursor
		*  
		*  Number of 6.6ns clock cycles before the tiger output goes inactive
		*	relative to the trigger signal.
		*/
		int stop;
		/*!	\brief mask for choosing the trigger source
		*
		*	A bit mask with a bit set for all trigger sources that can trigger this channel. Default is
		*	XTDC4_TRIGGER_SOURCE_S. One can choose a from a source @link deftriggersource here @endlink.
		*/
		int sources;
	} tdc4_tiger_block;
	/* low res trigger config */
	/*!\ingroup trigger
	*	\brief contains trigger settings
	*/
	typedef struct {
		crono_bool_t falling;	//!< triggers on falling edges
		crono_bool_t rising;	//!< triggers on rising edges
	} tdc4_trigger;