src/crono-bindgen/crono_tt4.rs

extern "C" {
    #[doc = " \\ingroup readout"]
    #[doc = "\t\\brief returns most recent error message"]
    #[doc = "\t\\param *device is type timetagger4_device"]
    pub fn timetagger4_get_last_error_message(
        device: *mut timetagger4_device,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = "\t\\ingroup readout"]
    #[doc = "\t\\brief returns the type of the device"]
    #[doc = ""]
    #[doc = "\t@link devicetype CRONO_DEVICE_TIMETAGGER4 @endlink"]
    pub fn timetagger4_get_device_type(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
#[doc = "\t\\ingroup channel"]
#[doc = "\t\\brief Contains TDC channel settings"]
pub type timetagger4_channel = tdc4_channel;
pub type timetagger4_lowres_channel = tdc4_lowres_channel;
#[doc = "\t\\ingroup tiger"]
#[doc = "\t\\brief contains settings of timing generator"]
pub type timetagger4_tiger_block = tdc4_tiger_block;
#[doc = "\\ingroup trigger"]
#[doc = "\t\\brief contains trigger settings"]
pub type timetagger4_trigger = tdc4_trigger;
#[doc = " \\ingroup confstruct Structure timetagger4_configuration"]
#[doc = "\t\\brief\tcontains configuration information"]
#[doc = ""]
#[doc = "\tThis structure contains the configuration information. It is used in conjunction with"]
#[doc = "\t@link conffuncts timetagger4_get_default_configuration(), timetagger4_get_current_configuration()"]
#[doc = "\tand timetagger4_configure() @endlink"]
#[doc = ""]
#[doc = "\tInternally it uses the structures @link trigger timetagger4_trigger @endlink and @link tiger"]
#[doc = "\ttimetagger4_tiger_block @endlink"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct timetagger4_configuration {
    #[doc = "!< The number of bytes occupied by the structure"]
    pub size: ::std::os::raw::c_int,
    #[doc = " \\brief A version number"]
    #[doc = ""]
    #[doc = " that is increased when the definition of the structure is changed. The increment"]
    #[doc = " can be larger than one to match driver version numbers or similar. Set to 0 for"]
    #[doc = " all versions up to first release."]
    pub version: ::std::os::raw::c_int,
    #[doc = " \\brief TDC mode"]
    #[doc = ""]
    #[doc = "\tcan be @link tdcmode grouped or continous @endlink. Currently supported: grouped."]
    pub tdc_mode: ::std::os::raw::c_int,
    #[doc = " \\brief rising or falling edge trigger"]
    #[doc = ""]
    #[doc = "\twhether to sync the TDC on the rising or falling edge"]
    pub start_rising: ::std::os::raw::c_uchar,
    #[doc = " \\brief Set DAC channels for T, A - D."]
    #[doc = ""]
    #[doc = "\tdc_offset[0]     : Start"]
    #[doc = ""]
    #[doc = "\tdc_offset[1 - 4] : A - D"]
    #[doc = ""]
    #[doc = "\tSet to a value between -1.65V and +0.85V. This should be close to 50% of the height of your pulses on"]
    #[doc = "\tthe inputs. Examples for various signaling standards are defined in @link defdcoffset #defines for"]
    #[doc = "\tdc_offset @endlink. The inputs are AC coupled. This means that for pulse inputs the absolute voltage is"]
    #[doc = "\tnot important. it is rather the relative pulse amplitude that causes the input circuits to switch."]
    #[doc = "\tdc_offset for an input must be set to the relative switching voltage for the input standard in use. If"]
    #[doc = "\tthe pulses are negative, a negative switching threshold must be set and vice versa."]
    pub dc_offset: [f64; 5usize],
    #[doc = "!< Configuration of external trigger sources"]
    pub trigger: [timetagger4_trigger; 16usize],
    #[doc = "!< configuration of the timing generator"]
    pub tiger_block: [timetagger4_tiger_block; 5usize],
    #[doc = "!< configure polaritiy, type and threshold for the TDC channels"]
    pub channel: [timetagger4_channel; 4usize],
    pub lowres_channel: [timetagger4_lowres_channel; 3usize],
    #[doc = " \\brief component to create a trigger either periodically or randomly."]
    #[doc = ""]
    #[doc = "  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink"]
    #[doc = "\tand N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink"]
    #[doc = "\tthat result in a distance between triggers of"]
    #[doc = ""]
    #[doc = "\t\tT = 1 + M + [1...2^N]"]
    #[doc = ""]
    #[doc = "\tclock cycles."]
    #[doc = ""]
    #[doc = "\t\t0 <= M < 2^32"]
    #[doc = ""]
    #[doc = "\t\t0 <= N < 32"]
    #[doc = ""]
    #[doc = "  there is no enable or reset as the usage of this trigger can be configured in the channels."]
    pub auto_trigger_period: ::std::os::raw::c_int,
    #[doc = " \\brief component to create a trigger either periodically or randomly."]
    #[doc = ""]
    #[doc = "  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink"]
    #[doc = "\tand N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink"]
    #[doc = "\tthat result in a distance between triggers of"]
    #[doc = ""]
    #[doc = "\t\tT = 1 + M + [1...2^N]"]
    #[doc = ""]
    #[doc = "\tclock cycles."]
    #[doc = ""]
    #[doc = "\t\t0 <= M < 2^32"]
    #[doc = ""]
    #[doc = "\t\t0 <= N < 32"]
    #[doc = ""]
    #[doc = "  there is no enable or reset as the usage of this trigger can be configured in the channels."]
    pub auto_trigger_random_exponent: ::std::os::raw::c_int,
}
extern "C" {
    #[doc = "\t\\ingroup conffuncts"]
    #[doc = "\t\\brief gets default configuration"]
    #[doc = ""]
    #[doc = "\tCopies the default configuration to the specified config pointer. Return values are listed @link defdefconf here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *config of type timetagger4_configuration"]
    pub fn timetagger4_get_default_configuration(
        device: *mut timetagger4_device,
        config: *mut timetagger4_configuration,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup conffuncts"]
    #[doc = "\t\\brief gets current configuration"]
    #[doc = ""]
    #[doc = "\tCopies the current configuration to the specified config pointer. Return values are listed @link defcurconf here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *config of type timetagger4_configuration"]
    pub fn timetagger4_get_current_configuration(
        device: *mut timetagger4_device,
        config: *mut timetagger4_configuration,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup conffuncts"]
    #[doc = "\t\\brief configures timetagger4 device"]
    #[doc = ""]
    #[doc = "\tReturn values are listed @link defconf here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *config of type timetagger4_configuration"]
    pub fn timetagger4_configure(
        device: *mut timetagger4_device,
        config: *mut timetagger4_configuration,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup initfuncts"]
    #[doc = "\t\\brief Return the number of boards that are supported by this driver in the system."]
    #[doc = "\t\\param *error_code is type int"]
    #[doc = "\t\\param **error_message is type const char"]
    pub fn timetagger4_count_devices(
        error_code: *mut ::std::os::raw::c_int,
        error_message: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup initfuncts"]
    #[doc = " @{"]
    #[doc = ""]
    #[doc = "\tGets a set of default parameters for @link timetagger4_init timetagger4_init() @endlink . This must always"]
    #[doc = "\tbe used to initialize the @link initparamsstruct timetagger4_init_parameter() @endlink structure."]
    #[doc = "\tReturn values are listed @link defdefinpar here @endlink."]
    #[doc = "\t\\param init is type *timetagger4_init_parameters"]
    pub fn timetagger4_get_default_init_parameters(
        init: *mut timetagger4_init_parameters,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\brief Open and initialize the TIMETAGGER4 board with the given index."]
    #[doc = ""]
    #[doc = "\tWith error_code and error_message the user must provide pointers where error information should be"]
    #[doc = "\twritten by the driver. Return values are listed @link definit here @endlink."]
    #[doc = "\t\\param *params type timetagger4_init_parameters"]
    #[doc = "\t\\param *error_code is type int"]
    #[doc = "\t\\param **error_message is type char. The buffer for the error message has to contain at least 80 chars."]
    pub fn timetagger4_init(
        params: *mut timetagger4_init_parameters,
        error_code: *mut ::std::os::raw::c_int,
        error_message: *mut *const ::std::os::raw::c_char,
    ) -> *mut timetagger4_device;
}
#[doc = "\t\\ingroup readin"]
#[doc = "\t\\brief The parameters of the read commands"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct timetagger4_read_in {
    #[doc = "!< timetagger4_read automatically acknowledges packets from the last read"]
    pub acknowledge_last_read: ::std::os::raw::c_uchar,
}
#[doc = " \\ingroup strucreadout"]
#[doc = "\t\\brief struct for the read out of the Ndigo packets"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct timetagger4_read_out {
    #[doc = "\t\\brief pointer to the first packet"]
    #[doc = ""]
    #[doc = "\tthat was captured by the call of @link readout timetagger4_read @endlink"]
    pub first_packet: *mut crono_packet,
    #[doc = "\t\\brief The packet after the last one"]
    #[doc = ""]
    #[doc = "\tthis is not a valid packet"]
    pub last_packet: *mut crono_packet,
    #[doc = " \\brief error code"]
    #[doc = ""]
    #[doc = "\tThe assignments of the error codes can be found @link defread here @endlink."]
    pub error_code: ::std::os::raw::c_int,
    #[doc = "\t\\brief error message"]
    pub error_message: *const ::std::os::raw::c_char,
}
extern "C" {
    #[doc = "\t\\ingroup readout"]
    #[doc = "\t\\brief Reads packets from the board"]
    #[doc = ""]
    #[doc = "\toptionally automatically acknowledges the last read packets. Return values are listed @link defread here @endlink."]
    #[doc = "\t\\param *device is type timetagger4_device"]
    #[doc = "\t\\param *in is type timetagger4_read_in"]
    #[doc = "\t\\param *out is type timetagger4_read_out"]
    pub fn timetagger4_read(
        device: *mut timetagger4_device,
        in_: *mut timetagger4_read_in,
        out: *mut timetagger4_read_out,
    ) -> ::std::os::raw::c_int;
}
